# noteBoogie

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.book.yml  pyproject.toml
.github/workflows/: test.yml
api/: main.py  mentor_service.py  models.py  pptx_coach.py  slide_review_service.py
commands/: __init__.py  book_commands.py
examples/: docker-compose-dev.yml
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
gateway/: Cargo.toml  Dockerfile  README.md  build.rs  rust-toolchain.toml
gateway/src/: chapters.rs  config.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  repo.rs  sidecar.rs
gateway/tests/: generation_it.rs  handlers_it.rs  repo_it.rs
protos/: podcast.proto
scripts/: batch_import_books.py  book_mcp_server.py  distill_reward.py  eval_transcript.py  export_audiobook.py  generate_chapter_insights.py  ingest_book.py  optimize_briefing.py  optimize_briefing_bandit.py  setup_book_navigator_models.py  verify_local_llm.py
sidecar/: Dockerfile  README.md  podcast_runner.py  podcast_sidecar.py
tests/: test_ask_refusal.py  test_bandit_optimizer.py  test_book_import.py  test_book_mcp_server.py  test_book_navigator_migrations.py  test_distill_reward.py  test_eval_transcript.py  test_export_audiobook.py  test_generate_chapter_insights.py  test_ingest_book.py  test_mentor_api.py  test_mentor_graph.py  test_optimize_briefing.py  test_podcast_feedback.py  test_pptx_coach.py  test_search_api.py  test_setup_book_navigator_models.py  test_sidecar.py  test_slide_review_api.py
(+97 files in other folders)
